[WIP] updating figures in the paper

--- a/notebooks/figures/faithfulness.ipynb
+++ b/notebooks/figures/faithfulness.ipynb
@@ -428,7 +428,7 @@
     "\n",
     "plt.xticks(np.arange(len(recalls)) + bar_width, [cat.capitalize() for cat in category_order])\n",
     "plt.ylabel(\"Faithfulness\")\n",
-    "plt.legend(ncol = 3, bbox_to_anchor=(0.5, -.25), loc='lower center')\n",
+    "plt.legend(ncol = 3, bbox_to_anchor=(0.5, -.25), loc='lower center', frameon=False)\n",
     "plt.savefig(f\"figs/faithfulness_lre_models.pdf\", bbox_inches=\"tight\")\n",
     "plt.show()"
    ]
