[WIP] representation editing for low-rank explanation doesn't give satisfactory results

--- a/notebooks/representation_editing_low_rank.ipynb
+++ b/notebooks/representation_editing_low_rank.ipynb
@@ -49,8 +49,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-07-21 16:45:53 src.models INFO     loading EleutherAI/gpt-j-6B (device=cuda, fp16=True)\n",
-      "2023-07-21 16:46:02 src.models INFO     dtype: torch.float16, device: cuda:0, memory: 12219206136\n"
+      "2023-07-25 22:03:47 src.models INFO     loading EleutherAI/gpt-j-6B (device=cuda, fp16=True)\n",
+      "2023-07-25 22:03:56 src.models INFO     dtype: torch.float16, device: cuda:0, memory: 12219206136\n"
      ]
     }
    ],
@@ -69,24 +69,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-07-21 17:12:18 src.utils.experiment_utils INFO     setting all seeds to 123456\n",
-      "2023-07-21 17:12:18 src.operators WARNING  relation has > 1 prompt_templates, will use first (The capital city of {} is)\n",
-      "2023-07-21 17:12:44 src.operators WARNING  relation has > 1 prompt_templates, will use first (The official currency of {} is the)\n",
-      "2023-07-21 17:13:12 src.operators WARNING  relation has > 1 prompt_templates, will use first (People in {} speak)\n"
+      "2023-07-25 22:03:56 src.utils.experiment_utils INFO     setting all seeds to 123456\n",
+      "2023-07-25 22:03:56 src.operators WARNING  relation has > 1 prompt_templates, will use first (The capital city of {} is)\n",
+      "2023-07-25 22:04:22 src.operators WARNING  relation has > 1 prompt_templates, will use first (The official currency of {} is the)\n",
+      "2023-07-25 22:04:51 src.operators WARNING  relation has > 1 prompt_templates, will use first (People in {} speak)\n"
      ]
     }
    ],
    "source": [
     "##################################\n",
-    "layer = 5\n",
-    "rank = 50\n",
+    "layer = 3\n",
+    "rank = 70\n",
     "beta = 2.25\n",
     "n_train = 5\n",
     "selected_relations = [r for r in dataset if r.name in [\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -190,8 +190,8 @@
       "Chile -- country currency --  Pes (p=0.757)\n",
       "Chile -- country language --  Spanish (p=0.937)\n",
       "=================================\n",
-      "Russia -- country capital city --  Moscow (p=0.988)\n",
-      "Tokyo -- country currency --  Yen (p=0.969)\n",
+      "Italy -- country capital city --  Rome (p=0.965)\n",
+      "Japan -- country currency --  Yen (p=0.980)\n",
       "Brazil -- country language --  Portuguese (p=0.877)\n"
      ]
     }
@@ -200,8 +200,8 @@
     "##################################################\n",
     "source_subject = \"Chile\"\n",
     "targ_prop_for_subj = {\n",
-    "    \"country capital city\": \"Russia\",\n",
-    "    \"country currency\": \"Tokyo\",\n",
+    "    \"country capital city\": \"Italy\",\n",
+    "    \"country currency\": \"Japan\",\n",
     "    \"country language\": \"Brazil\"      \n",
     "}\n",
     "##################################################\n",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,22 +290,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 -- 0 -- 1912.0, 1.0009765625\n",
-      "0 -- 1 -- 1266.0, 0.568359375\n",
-      "0 -- 2 -- 315.25, 0.236083984375\n",
-      "1 -- 0 -- 1266.0, 0.568359375\n",
-      "1 -- 1 -- 2594.0, 1.0\n",
-      "1 -- 2 -- 395.75, 0.25439453125\n",
-      "2 -- 0 -- 315.25, 0.236083984375\n",
-      "2 -- 1 -- 395.75, 0.25439453125\n",
-      "2 -- 2 -- 932.5, 1.0009765625\n"
+      "0 -- 0 -- 1546.0, 1.0\n",
+      "0 -- 1 -- 1039.0, 0.48486328125\n",
+      "0 -- 2 -- 295.25, 0.2366943359375\n",
+      "1 -- 0 -- 1039.0, 0.48486328125\n",
+      "1 -- 1 -- 2972.0, 0.9990234375\n",
+      "1 -- 2 -- 484.0, 0.27978515625\n",
+      "2 -- 0 -- 295.25, 0.2366943359375\n",
+      "2 -- 1 -- 484.0, 0.27978515625\n",
+      "2 -- 2 -- 1006.5, 1.0\n"
      ]
     }
    ],
@@ -318,25 +318,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(43.7188, device='cuda:0', dtype=torch.float16)\n",
-      "tensor(50.9375, device='cuda:0', dtype=torch.float16)\n",
-      "tensor(30.5312, device='cuda:0', dtype=torch.float16)\n"
+      "tensor(39.3125, device='cuda:0', dtype=torch.float16)\n",
+      "tensor(54.5000, device='cuda:0', dtype=torch.float16)\n",
+      "tensor(31.7188, device='cuda:0', dtype=torch.float16)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(torch.Size([4096]), 96.9375)"
+       "(torch.Size([4096]), 95.6875)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,31 +351,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(' Yen', 0.877),\n",
-       " (' Japanese', 0.061),\n",
-       " (' Y', 0.044),\n",
-       " (' Dollar', 0.003),\n",
-       " (' yen', 0.003),\n",
-       " (' ¥', 0.001),\n",
-       " (' Ren', 0.001),\n",
-       " (' Yu', 0.001),\n",
-       " (' Yuan', 0.001),\n",
-       " (' Japan', 0.001)]"
+       "[(' Portuguese', 0.829),\n",
+       " (' Portug', 0.09),\n",
+       " (' Brazilian', 0.025),\n",
+       " (' port', 0.024),\n",
+       " (' Spanish', 0.007),\n",
+       " (' English', 0.004),\n",
+       " (' Port', 0.003),\n",
+       " ('\\n', 0.002),\n",
+       " (' Brazil', 0.002),\n",
+       " (' French', 0.001)]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "prop = \"country currency\"\n",
+    "# prop = \"country capital city\"\n",
+    "# prop = \"country currency\"\n",
+    "prop = \"country language\"\n",
     "\n",
     "delta_s, hs_and_zs = get_delta_s(\n",
     "    prop = prop,\n",
