[WIP] updating figures

--- a/notebooks/representation_editing_low_rank.ipynb
+++ b/notebooks/representation_editing_low_rank.ipynb
@@ -49,8 +49,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-07-25 22:03:47 src.models INFO     loading EleutherAI/gpt-j-6B (device=cuda, fp16=True)\n",
-      "2023-07-25 22:03:56 src.models INFO     dtype: torch.float16, device: cuda:0, memory: 12219206136\n"
+      "2023-07-26 12:57:26 src.models INFO     loading EleutherAI/gpt-j-6B (device=cuda, fp16=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-07-26 12:57:34 src.models INFO     dtype: torch.float16, device: cuda:0, memory: 12219206136\n"
      ]
     }
    ],
@@ -76,10 +82,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-07-25 22:03:56 src.utils.experiment_utils INFO     setting all seeds to 123456\n",
-      "2023-07-25 22:03:56 src.operators WARNING  relation has > 1 prompt_templates, will use first (The capital city of {} is)\n",
-      "2023-07-25 22:04:22 src.operators WARNING  relation has > 1 prompt_templates, will use first (The official currency of {} is the)\n",
-      "2023-07-25 22:04:51 src.operators WARNING  relation has > 1 prompt_templates, will use first (People in {} speak)\n"
+      "2023-07-26 12:57:34 src.utils.experiment_utils INFO     setting all seeds to 123456\n",
+      "2023-07-26 12:57:34 src.operators WARNING  relation has > 1 prompt_templates, will use first (The capital city of {} is)\n",
+      "2023-07-26 12:58:00 src.operators WARNING  relation has > 1 prompt_templates, will use first (The official currency of {} is the)\n",
+      "2023-07-26 12:58:29 src.operators WARNING  relation has > 1 prompt_templates, will use first (People in {} speak)\n"
      ]
     }
    ],
@@ -179,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -190,9 +196,9 @@
       "Chile -- country currency --  Pes (p=0.757)\n",
       "Chile -- country language --  Spanish (p=0.937)\n",
       "=================================\n",
-      "Italy -- country capital city --  Rome (p=0.965)\n",
+      "Russia -- country capital city --  Moscow (p=0.988)\n",
       "Japan -- country currency --  Yen (p=0.980)\n",
-      "Brazil -- country language --  Portuguese (p=0.877)\n"
+      "England -- country language --  English (p=0.941)\n"
      ]
     }
    ],
@@ -200,9 +206,9 @@
     "##################################################\n",
     "source_subject = \"Chile\"\n",
     "targ_prop_for_subj = {\n",
-    "    \"country capital city\": \"Italy\",\n",
+    "    \"country capital city\": \"Russia\",\n",
     "    \"country currency\": \"Japan\",\n",
-    "    \"country language\": \"Brazil\"      \n",
+    "    \"country language\": \"England\"      \n",
     "}\n",
     "##################################################\n",
     "\n",
@@ -220,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,21 +263,46 @@
     "    z_target = hs_and_zs.z_by_subj[targ_prop_for_subj[prop]]\n",
     "    # print(z_target.norm().item(), z_source.norm().item())\n",
     "\n",
+    "    h_source = hs_and_zs.h_by_subj[source_subject]\n",
+    "    h_target = hs_and_zs.h_by_subj[targ_prop_for_subj[prop]]\n",
+    "\n",
     "    z_source *= fix_latent_norm / z_source.norm() if fix_latent_norm is not None else 1.0\n",
     "    z_target *= z_source.norm() / z_target.norm() if fix_latent_norm is not None else 1.0\n",
-    "    # print(z_target.norm().item(), z_source.norm().item())\n",
+    "    print(z_target.norm().item(), z_source.norm().item())\n",
     "\n",
     "    delta_s = w_p_inv @  (z_target.squeeze() - z_source.squeeze())\n",
-    "    # print(delta_s.norm().item())\n",
+    "    \n",
+    "    print(f\"h_source: {h_source.norm().item()} | h_target: {h_target.norm().item()}\")\n",
+    "    print(f\"inv_h_source: {(w_p_inv @ z_source).norm().item()} | inv_h_target: {(w_p_inv @ z_target).norm().item()}\")\n",
+    "    print(delta_s.norm().item())\n",
     "\n",
     "    return delta_s, hs_and_zs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "260.25 237.625\n",
+      "h_source: 59.625 | h_target: 49.03125\n",
+      "inv_h_source: 41.59375 | inv_h_target: 39.0625\n",
+      "41.5\n",
+      "276.5 219.625\n",
+      "h_source: 59.375 | h_target: 49.46875\n",
+      "inv_h_source: 52.71875 | inv_h_target: 52.65625\n",
+      "52.28125\n",
+      "355.25 287.25\n",
+      "h_source: 60.46875 | h_target: 46.8125\n",
+      "inv_h_source: 46.875 | inv_h_target: 53.53125\n",
+      "42.71875\n"
+     ]
+    }
+   ],
    "source": [
     "delta_s_by_prop = {}\n",
     "for relation_name in targ_prop_for_subj:\n",
@@ -279,7 +310,7 @@
     "        prop = relation_name,\n",
     "        source_subject = source_subject,\n",
     "        target_subject = targ_prop_for_subj[relation_name],\n",
-    "        fix_latent_norm=250\n",
+    "        # fix_latent_norm=250\n",
     "    )\n",
     "\n",
     "    delta_s_by_prop[relation_name] = {\n",
@@ -290,22 +321,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 -- 0 -- 1546.0, 1.0\n",
-      "0 -- 1 -- 1039.0, 0.48486328125\n",
-      "0 -- 2 -- 295.25, 0.2366943359375\n",
-      "1 -- 0 -- 1039.0, 0.48486328125\n",
-      "1 -- 1 -- 2972.0, 0.9990234375\n",
-      "1 -- 2 -- 484.0, 0.27978515625\n",
-      "2 -- 0 -- 295.25, 0.2366943359375\n",
-      "2 -- 1 -- 484.0, 0.27978515625\n",
-      "2 -- 2 -- 1006.5, 1.0\n"
+      "0 -- 0 -- 1723.0, 1.0\n",
+      "0 -- 1 -- 1097.0, 0.50537109375\n",
+      "0 -- 2 -- 505.0, 0.284912109375\n",
+      "1 -- 0 -- 1097.0, 0.50537109375\n",
+      "1 -- 1 -- 2734.0, 1.0009765625\n",
+      "1 -- 2 -- 780.0, 0.34912109375\n",
+      "2 -- 0 -- 505.0, 0.284912109375\n",
+      "2 -- 1 -- 780.0, 0.34912109375\n",
+      "2 -- 2 -- 1824.0, 0.99951171875\n"
      ]
     }
    ],
@@ -313,30 +344,30 @@
     "drr = [prop[\"delta_s\"] for relation, prop in delta_s_by_prop.items()]\n",
     "for i in range(len(drr)):\n",
     "    for j in range(len(drr)):\n",
-    "        print(f\"{i} -- {j} -- {drr[i].T @ drr[j]}, {torch.cosine_similarity(drr[i], drr[j], dim=0).item()}\")"
+    "        print(f\"{i} -- {j} -- {(drr[i][None] @ drr[j][None].T).squeeze().item()}, {torch.cosine_similarity(drr[i], drr[j], dim=0).item()}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(39.3125, device='cuda:0', dtype=torch.float16)\n",
-      "tensor(54.5000, device='cuda:0', dtype=torch.float16)\n",
-      "tensor(31.7188, device='cuda:0', dtype=torch.float16)\n"
+      "tensor(41.5000, device='cuda:0', dtype=torch.float16)\n",
+      "tensor(52.2812, device='cuda:0', dtype=torch.float16)\n",
+      "tensor(42.7188, device='cuda:0', dtype=torch.float16)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(torch.Size([4096]), 95.6875)"
+       "(torch.Size([4096]), 35.03125)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,30 +377,42 @@
     "for relation_name in delta_s_by_prop:\n",
     "    cumulative_delta_s += delta_s_by_prop[relation_name][\"delta_s\"]\n",
     "    print(delta_s_by_prop[relation_name][\"delta_s\"].norm())\n",
+    "\n",
+    "cumulative_delta_s /= 3\n",
     "cumulative_delta_s.shape, cumulative_delta_s.norm().item()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "250.125 250.125\n",
+      "h_source: 60.46875 | h_target: 46.8125\n",
+      "inv_h_source: 40.78125 | inv_h_target: 37.71875\n",
+      "33.15625\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[(' Portuguese', 0.829),\n",
-       " (' Portug', 0.09),\n",
-       " (' Brazilian', 0.025),\n",
-       " (' port', 0.024),\n",
-       " (' Spanish', 0.007),\n",
-       " (' English', 0.004),\n",
-       " (' Port', 0.003),\n",
-       " ('\\n', 0.002),\n",
-       " (' Brazil', 0.002),\n",
-       " (' French', 0.001)]"
+       "[(' Japanese', 19.469),\n",
+       " (' English', 19.047),\n",
+       " (' Russian', 19.016),\n",
+       " (' Chinese', 15.141),\n",
+       " (' Hindi', 14.844),\n",
+       " (' Ur', 14.523),\n",
+       " ('\\n', 14.414),\n",
+       " (' english', 14.25),\n",
+       " (' the', 14.109),\n",
+       " ('...', 13.984)]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -408,8 +451,8 @@
     "    mt.model, layers = [h_layer, z_layer],\n",
     "    edit_output=get_intervention(\n",
     "        # h = hs_and_zs.h_by_subj[source_subject]\n",
-    "        h = hs_and_zs.h_by_subj[source_subject] + delta_s,\n",
-    "        # h = hs_and_zs.h_by_subj[source_subject] + cumulative_delta_s, \n",
+    "        # h = hs_and_zs.h_by_subj[source_subject] + delta_s,\n",
+    "        h = hs_and_zs.h_by_subj[source_subject] + cumulative_delta_s, \n",
     "        int_layer = h_layer, \n",
     "        subj_idx = h_index\n",
     "    )\n",
@@ -422,7 +465,7 @@
     "lens.interpret_logits(\n",
     "    mt = mt, \n",
     "    logits = outputs.logits[0][-1], \n",
-    "    get_proba=True\n",
+    "    # get_proba=True\n",
     ")"
    ]
   },
