--- a/notebooks/representation_editing_low_rank.ipynb
+++ b/notebooks/representation_editing_low_rank.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 149,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -12,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,21 +51,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-07-26 12:57:26 src.models INFO     loading EleutherAI/gpt-j-6B (device=cuda, fp16=True)\n"
+      "2023-07-28 17:12:39 src.models INFO     loading EleutherAI/gpt-j-6B (device=cuda, fp16=True)\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-07-26 12:57:34 src.models INFO     dtype: torch.float16, device: cuda:0, memory: 12219206136\n"
+      "2023-07-28 17:12:47 src.models INFO     dtype: torch.float16, device: cuda:0, memory: 12219206136\n"
      ]
     }
    ],
@@ -66,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,30 +84,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-07-26 12:57:34 src.utils.experiment_utils INFO     setting all seeds to 123456\n",
-      "2023-07-26 12:57:34 src.operators WARNING  relation has > 1 prompt_templates, will use first (The capital city of {} is)\n",
-      "2023-07-26 12:58:00 src.operators WARNING  relation has > 1 prompt_templates, will use first (The official currency of {} is the)\n",
-      "2023-07-26 12:58:29 src.operators WARNING  relation has > 1 prompt_templates, will use first (People in {} speak)\n"
+      "2023-07-28 17:31:27 src.utils.experiment_utils INFO     setting all seeds to 123456\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023-07-28 17:32:11 src.operators WARNING  relation has > 1 prompt_templates, will use first ({} works as a)\n",
+      "2023-07-28 17:32:46 src.operators WARNING  relation has > 1 prompt_templates, will use first (For university, {} attended)\n"
      ]
     }
    ],
    "source": [
     "##################################\n",
     "layer = 3\n",
-    "rank = 70\n",
+    "rank = 170\n",
     "beta = 2.25\n",
     "n_train = 5\n",
     "selected_relations = [r for r in dataset if r.name in [\n",
-    "        \"country capital city\",\n",
-    "        \"country currency\",\n",
-    "        \"country language\"\n",
+    "        \"person occupation\",\n",
+    "        \"name birthplace\",\n",
+    "        \"person university\"\n",
     "    ]\n",
     "]\n",
     "\n",
@@ -134,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
@@ -142,35 +156,35 @@
      "output_type": "stream",
      "text": [
       "-----------------------------------\n",
-      "country capital city\n",
+      "name birthplace\n",
       "-----------------------------------\n",
-      "['Pakistan -> Islamabad', 'Argentina -> Buenos Aires', 'Peru -> Lima', 'Australia -> Canberra', 'Germany -> Berlin']\n",
-      "<|endoftext|>The capital city of Pakistan is Islamabad\n",
-      "The capital city of Argentina is Buenos Aires\n",
-      "The capital city of Peru is Lima\n",
-      "The capital city of Australia is Canberra\n",
-      "The capital city of Germany is Berlin\n",
-      "The capital city of {} is\n",
+      "['Rohit -> India', 'Sakura -> Japan', 'Marco -> Italy', 'Hong -> China', 'Kraipob -> Thailand']\n",
+      "<|endoftext|>Rohit was born in the country of India\n",
+      "Sakura was born in the country of Japan\n",
+      "Marco was born in the country of Italy\n",
+      "Hong was born in the country of China\n",
+      "Kraipob was born in the country of Thailand\n",
+      "{} was born in the country of\n",
       "-----------------------------------\n",
-      "country currency\n",
+      "person occupation\n",
       "-----------------------------------\n",
-      "['Norway -> Krone', 'Russia -> Ruble', 'Argentina -> Peso', 'New Zealand -> Dollar', 'Czech Republic -> Koruna']\n",
-      "<|endoftext|>The official currency of Norway is the Krone\n",
-      "The official currency of Russia is the Ruble\n",
-      "The official currency of Argentina is the Peso\n",
-      "The official currency of New Zealand is the Dollar\n",
-      "The official currency of Czech Republic is the Koruna\n",
-      "The official currency of {} is the\n",
+      "['Yakubu Gowon -> politician', 'Geraldine McNulty -> actor', 'Andrew Salkey -> poet', 'Wilhelm Magnus -> mathematician', 'Samuel Medary -> journalist']\n",
+      "<|endoftext|>Yakubu Gowon works as a politician\n",
+      "Geraldine McNulty works as a actor\n",
+      "Andrew Salkey works as a poet\n",
+      "Wilhelm Magnus works as a mathematician\n",
+      "Samuel Medary works as a journalist\n",
+      "{} works as a\n",
       "-----------------------------------\n",
-      "country language\n",
+      "person university\n",
       "-----------------------------------\n",
-      "['Chile -> Spanish', 'India -> Hindi', 'South Korea -> Korean', 'Germany -> German', 'United States -> English']\n",
-      "<|endoftext|>People in Chile speak Spanish\n",
-      "People in India speak Hindi\n",
-      "People in South Korea speak Korean\n",
-      "People in Germany speak German\n",
-      "People in United States speak English\n",
-      "People in {} speak\n"
+      "['Ursula K. Le Guin -> Columbia University', 'Michelle Obama -> Princeton University', 'Hillary Clinton -> Wellesley College', 'Britney Spears -> University of Nebraska High School', 'Johann Wolfgang von Goethe -> University of Strasbourg']\n",
+      "<|endoftext|>For university, Ursula K. Le Guin attended Columbia University\n",
+      "For university, Michelle Obama attended Princeton University\n",
+      "For university, Hillary Clinton attended Wellesley College\n",
+      "For university, Britney Spears attended University of Nebraska High School\n",
+      "For university, Johann Wolfgang von Goethe attended University of Strasbourg\n",
+      "For university, {} attended\n"
      ]
     }
    ],
@@ -185,30 +199,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for relation_name in relation_properties:\n",
+    "    relation_properties[relation_name][\"W_inv\"] = functional.low_rank_pinv(\n",
+    "        matrix = relation_properties[relation_name][\"operator\"].weight,\n",
+    "        rank=rank,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 242,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chile -- country capital city --  Santiago (p=0.996)\n",
-      "Chile -- country currency --  Pes (p=0.757)\n",
-      "Chile -- country language --  Spanish (p=0.937)\n",
+      "X -- person occupation --  politician (p=0.067)\n",
+      "X -- name birthplace --  Russia (p=0.076)\n",
+      "X -- person university --  University (p=0.348)\n",
       "=================================\n",
-      "Russia -- country capital city --  Moscow (p=0.988)\n",
-      "Japan -- country currency --  Yen (p=0.980)\n",
-      "England -- country language --  English (p=0.941)\n"
+      "Sherlock Holmes -- person occupation --  detective (p=0.523)\n",
+      "Jackie Chan -- name birthplace --  China (p=0.578)\n",
+      "Bill Gates -- person university --  Harvard (p=0.893)\n"
      ]
     }
    ],
    "source": [
     "##################################################\n",
-    "source_subject = \"Chile\"\n",
+    "source_subject = \"X\"\n",
     "targ_prop_for_subj = {\n",
-    "    \"country capital city\": \"Russia\",\n",
-    "    \"country currency\": \"Japan\",\n",
-    "    \"country language\": \"England\"      \n",
+    "    \"person occupation\": \"Sherlock Holmes\",\n",
+    "    \"name birthplace\": \"Jackie Chan\",\n",
+    "    \"person university\": \"Bill Gates\",  \n",
     "}\n",
     "##################################################\n",
     "\n",
@@ -226,20 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for relation_name in relation_properties:\n",
-    "    relation_properties[relation_name][\"W_inv\"] = functional.low_rank_pinv(\n",
-    "        matrix = relation_properties[relation_name][\"operator\"].weight,\n",
-    "        rank=rank,\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,25 +295,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "260.25 237.625\n",
-      "h_source: 59.625 | h_target: 49.03125\n",
-      "inv_h_source: 41.59375 | inv_h_target: 39.0625\n",
-      "41.5\n",
-      "276.5 219.625\n",
-      "h_source: 59.375 | h_target: 49.46875\n",
-      "inv_h_source: 52.71875 | inv_h_target: 52.65625\n",
-      "52.28125\n",
-      "355.25 287.25\n",
-      "h_source: 60.46875 | h_target: 46.8125\n",
-      "inv_h_source: 46.875 | inv_h_target: 53.53125\n",
-      "42.71875\n"
+      "312.75 363.5\n",
+      "h_source: 46.5 | h_target: 53.28125\n",
+      "inv_h_source: 149.5 | inv_h_target: 143.0\n",
+      "85.3125\n",
+      "241.125 319.0\n",
+      "h_source: 46.25 | h_target: 51.75\n",
+      "inv_h_source: 72.5625 | inv_h_target: 72.0625\n",
+      "53.96875\n",
+      "159.125 350.25\n",
+      "h_source: 43.875 | h_target: 50.03125\n",
+      "inv_h_source: 47.40625 | inv_h_target: 44.8125\n",
+      "47.78125\n"
      ]
     }
    ],
@@ -321,22 +335,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 -- 0 -- 1723.0, 1.0\n",
-      "0 -- 1 -- 1097.0, 0.50537109375\n",
-      "0 -- 2 -- 505.0, 0.284912109375\n",
-      "1 -- 0 -- 1097.0, 0.50537109375\n",
-      "1 -- 1 -- 2734.0, 1.0009765625\n",
-      "1 -- 2 -- 780.0, 0.34912109375\n",
-      "2 -- 0 -- 505.0, 0.284912109375\n",
-      "2 -- 1 -- 780.0, 0.34912109375\n",
-      "2 -- 2 -- 1824.0, 0.99951171875\n"
+      "0 -- 0 -- 7284.0, 0.9990234375\n",
+      "0 -- 1 -- 346.75, 0.07525634765625\n",
+      "0 -- 2 -- -11.109375, -0.0027179718017578125\n",
+      "1 -- 0 -- 346.75, 0.07525634765625\n",
+      "1 -- 1 -- 2912.0, 0.99951171875\n",
+      "1 -- 2 -- -113.5625, -0.044036865234375\n",
+      "2 -- 0 -- -11.109375, -0.0027179718017578125\n",
+      "2 -- 1 -- -113.5625, -0.044036865234375\n",
+      "2 -- 2 -- 2282.0, 0.99951171875\n"
      ]
     }
    ],
@@ -349,78 +363,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor(41.5000, device='cuda:0', dtype=torch.float16)\n",
-      "tensor(52.2812, device='cuda:0', dtype=torch.float16)\n",
-      "tensor(42.7188, device='cuda:0', dtype=torch.float16)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "(torch.Size([4096]), 35.03125)"
+       "(torch.Size([4096]), 49.71875)"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "max_norm = np.array([delta_s_by_prop[relation_name][\"delta_s\"].norm().item() for relation_name in delta_s_by_prop.keys()]).max()\n",
+    "\n",
     "cumulative_delta_s = torch.zeros_like(delta_s_by_prop[prop][\"delta_s\"])\n",
     "for relation_name in delta_s_by_prop:\n",
-    "    cumulative_delta_s += delta_s_by_prop[relation_name][\"delta_s\"]\n",
-    "    print(delta_s_by_prop[relation_name][\"delta_s\"].norm())\n",
-    "\n",
+    "    ds = delta_s_by_prop[relation_name][\"delta_s\"]\n",
+    "    ds = ds*max_norm / ds.norm()\n",
+    "    delta_s_by_prop[relation_name][\"delta_s\"] = ds\n",
+    "    cumulative_delta_s += ds\n",
     "cumulative_delta_s /= 3\n",
     "cumulative_delta_s.shape, cumulative_delta_s.norm().item()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 250,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# relation_names = [\n",
+    "#         \"person occupation\",\n",
+    "#         \"name birthplace\",\n",
+    "#         \"person university\"\n",
+    "# ]\n",
+    "\n",
+    "# cumulative_delta_s = (\n",
+    "#     delta_s_by_prop[relation_names[0]][\"delta_s\"] + \n",
+    "#     delta_s_by_prop[relation_names[1]][\"delta_s\"] + \n",
+    "#     delta_s_by_prop[relation_names[2]][\"delta_s\"]\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "250.125 250.125\n",
-      "h_source: 60.46875 | h_target: 46.8125\n",
-      "inv_h_source: 40.78125 | inv_h_target: 37.71875\n",
-      "33.15625\n"
+      "250.125 250.0\n",
+      "h_source: 43.875 | h_target: 50.03125\n",
+      "inv_h_source: 33.84375 | inv_h_target: 70.4375\n",
+      "62.375\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[(' Japanese', 19.469),\n",
-       " (' English', 19.047),\n",
-       " (' Russian', 19.016),\n",
-       " (' Chinese', 15.141),\n",
-       " (' Hindi', 14.844),\n",
-       " (' Ur', 14.523),\n",
-       " ('\\n', 14.414),\n",
-       " (' english', 14.25),\n",
-       " (' the', 14.109),\n",
-       " ('...', 13.984)]"
+       "[(' University', 20.953),\n",
+       " (' the', 19.109),\n",
+       " (' St', 18.812),\n",
+       " (' Duke', 18.062),\n",
+       " (' Oxford', 18.016),\n",
+       " (' Stanford', 17.75),\n",
+       " (' Brown', 17.703),\n",
+       " (' Harvard', 17.672),\n",
+       " (' City', 17.531),\n",
+       " (' Sun', 17.469)]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# prop = \"country capital city\"\n",
-    "# prop = \"country currency\"\n",
-    "prop = \"country language\"\n",
+    "# prop = \"person occupation\"\n",
+    "# prop = \"name birthplace\"\n",
+    "prop = \"person university\"\n",
     "\n",
     "delta_s, hs_and_zs = get_delta_s(\n",
     "    prop = prop,\n",
@@ -468,6 +495,13 @@
     "    # get_proba=True\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
